--- a/portfolio.html
+++ b/portfolio.html
@@ -27,15 +27,17 @@
           >
 
           <ul class="nav-list list">
-            <li>
+            <li class="nav-list-item">
               <a href="./index.html" class="nav-list-item link">Studio</a>
             </li>
-            <li>
-              <a href="./portfolio.html" class="nav-list-item link"
+            <li class="nav-list-item">
+              <a href="./portfolio.html" class="nav-list-item link current"
                 >Portfolio</a
               >
             </li>
-            <li><a href="" class="nav-list-item link">Contacts</a></li>
+            <li class="nav-list-item">
+              <a href="" class="nav-list-item link">Contacts</a>
+            </li>
           </ul>
         </nav>
 
@@ -83,13 +85,20 @@
           <ul class="portfolio-list list">
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/row-card-1.jpg"
-                  alt="Site of bank"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="portfolio-images"
+                    src="./images/portfolio/row-card-1.jpg"
+                    alt="Site of bank"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-card-descr">
                   <h2 class="portfolio-cards-title">
                     Banking App Interface Concept
@@ -100,13 +109,20 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/row-card-2.jpg"
-                  alt="Pay from phone"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="portfolio-images"
+                    src="./images/portfolio/row-card-2.jpg"
+                    alt="Pay from phone"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-card-descr">
                   <h2 class="portfolio-cards-title">Cashless Payment</h2>
                   <p class="portfolio-cards-subtitle">Marketing</p>
@@ -115,13 +131,20 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/row-card-3.jpg"
-                  alt="Macbook and iPhone"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="portfolio-images"
+                    src="./images/portfolio/row-card-3.jpg"
+                    alt="Macbook and iPhone"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-card-descr">
                   <h2 class="portfolio-cards-title">Meditation App</h2>
                   <p class="portfolio-cards-subtitle">App</p>
@@ -130,13 +153,20 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/row-card-4.jpg"
-                  alt="Helm in the car"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="portfolio-images"
+                    src="./images/portfolio/row-card-4.jpg"
+                    alt="Helm in the car"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-card-descr">
                   <h2 class="portfolio-cards-title">Taxi Service</h2>
                   <p class="portfolio-cards-subtitle">Marketing</p>
@@ -145,13 +175,20 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/row-card-5.jpg"
-                  alt="Phone and gallery of pictures"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="portfolio-images"
+                    src="./images/portfolio/row-card-5.jpg"
+                    alt="Phone and gallery of pictures"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-card-descr">
                   <h2 class="portfolio-cards-title">Screen Illustrations</h2>
                   <p class="portfolio-cards-subtitle">Design</p>
@@ -160,13 +197,20 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/row-card-6.jpg"
-                  alt="The girl with phone and headphones"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="portfolio-images"
+                    src="./images/portfolio/row-card-6.jpg"
+                    alt="The girl with phone and headphones"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-card-descr">
                   <h2 class="portfolio-cards-title">Online Courses</h2>
                   <p class="portfolio-cards-subtitle">Marketing</p>
@@ -175,13 +219,20 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/row-card-7.jpg"
-                  alt="Pictures with instruction for Stories"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="portfolio-images"
+                    src="./images/portfolio/row-card-7.jpg"
+                    alt="Pictures with instruction for Stories"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-card-descr">
                   <h2 class="portfolio-cards-title">
                     Instagram Stories Concept
@@ -192,13 +243,20 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/row-card-8.jpg"
-                  alt="The Package with productsWeb Site"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="portfolio-images"
+                    src="./images/portfolio/row-card-8.jpg"
+                    alt="The Package with productsWeb Site"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-card-descr">
                   <h2 class="portfolio-cards-title">Organic Food</h2>
                   <p class="portfolio-cards-subtitle">Web Site</p>
@@ -207,13 +265,20 @@
             </li>
             <li class="portfolio-list-item">
               <a href="" class="portfolio-list-link link">
-                <img
-                  class="portfolio-images"
-                  src="./images/portfolio/row-card-9.jpg"
-                  alt="Milk is pouring to a cup of coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-wrap">
+                  <img
+                    class="portfolio-images"
+                    src="./images/portfolio/row-card-9.jpg"
+                    alt="Milk is pouring to a cup of coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-card-descr">
                   <h2 class="portfolio-cards-title">Fresh Coffee</h2>
                   <p class="portfolio-cards-subtitle">Web Site</p>
